@@ -45,4 +45,17 @@ $config = array(
 		),
 	),
 	
+	// Reset Password form (for backend users)
+	'admin/reset_password' => array(
+		array(
+			'field'		=> 'password',
+			'label'		=> 'Password',
+			'rules'		=> 'required|matches[retype_password]',
+		),
+		array(
+			'field'		=> 'retype_password',
+			'label'		=> 'Retype Password',
+			'rules'		=> 'required',
+		),
+	),
 );
