@@ -12,6 +12,9 @@ class Admin extends MY_Controller {
 			redirect();
 			exit;
 		}
+
+		$this->load->helper('crud');
+		$this->load->model('Backend_user_model', 'backend_users');
 	}
 
 	/**
@@ -20,15 +23,41 @@ class Admin extends MY_Controller {
 	public function backend_user()
 	{
 		// CRUD table
-		$this->load->helper('crud');
 		$crud = generate_crud('backend_users');
 		$crud->columns('role', 'username', 'full_name', 'active', 'created_at');
 		$crud->unset_edit_fields('password');
+		$crud->add_action('Reset Password', '', 'admin/reset_password', 'fa fa-rotate-left fa-lg');
 		$crud->callback_before_insert(array($this, 'callback_before_create_user'));
 
 		$this->mTitle = "Backend Users";
 		$this->mViewFile = '_partial/crud';
 		$this->mViewData['crud_data'] = $crud->render();
+	}
+
+	/**
+	 * Reset password for backend users
+	 */
+	public function reset_password($user_id)
+	{
+		$this->mTitle = "Backend Users - Reset Password";
+		$this->mViewFile = 'admin/reset_password';
+		$this->mViewData['target'] = $this->backend_users->get($user_id);
+
+		if ( validate_form('', 'admin/reset_password') )
+		{
+			// update db
+			$password = $this->input->post('password');
+			$result = $this->backend_users->update($user_id, ['password' => hash_pw($password)]);
+
+			// success or failed
+			if ($result)
+				set_alert('success', 'Successfully updated.');
+			else
+				set_alert('danger', 'Database error.');
+
+			// refresh page to show alert msg
+			redirect( current_url() );
+		}
 	}
 	
 	/**
